--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,120 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'montseratt', sans-serif;
+}
+
+.app {
+  background-image: url('./assets/cold.jpg');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4 ease-out;
+}
+.app.warm {
+  background-image: url('./assets/warm.jpg');
+}
+
+main {
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
+  padding: 25px;
+}
+
+.search-box {
+  width: 100%;
+  margin: 0 0 75px;
+}
+
+.search-box .search-bar {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  appearance: none;
+  background: none;
+  border: 2px solid #fff;
+  border-radius: 15px 0px 15px 0px;
+  margin-top: -20px;
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+
+  font-size: 20px;
+  transition: 0.4s ease;;
+}
+
+.search-box .search-bar:focus {
+  background-color: rgba(240, 46, 170, 0.4);
+}
+
+.location-box .location {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  padding: 15px;
+  text-shadow: 3px 3px 2px rgba(8, 0, 0, 1);
+}
+
+.location-box .date {
+  color: #fff;
+  font-size: 19px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  padding: 0px 0px 0px 12px;
+  text-shadow: 2px 2px 1px rgba(8, 0, 0, 1);
+}
+
+.location-box .time {
+  color: #fff;
+  font-size: 19px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  padding: 0px 0px 0px 12px;
+  text-shadow: 2px 2px 1px rgba(8, 0, 0, 1);
+}
+
+.weather-box {
+  text-align: center;
+}
+
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 102px;
+  font-weight: 900;
+  text-shadow: 3px 6px 2px rgba(8, 0, 0, 1);
+  text-align: center;
+
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+}
+
+.weather-box .weather {
+  color: #fff;
+  font-size: 40px;
+  font-weight: 600;
+  text-shadow: 3px 3px 2px rgba(8, 0, 0, 1);
+}
+
+.error-message {
+  color: darkred;
+  font-size: 25px;
+  text-align: center;
+  text-shadow: 3px 3px 2px rgba(8, 0, 0, 1);
+}
+
+/* making the code look better on android and stopping overflow */
+
+@media screen and (max-width:768px) {
+  body {
+    overflow-x: hidden;
+  }
 }
